--- a/templates/frontend/gateway/public/index.html
+++ b/templates/frontend/gateway/public/index.html
@@ -2,20 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.png" />
+    <link rel="icon" href="https://storage.googleapis.com/media.urbit.org/logo/White/~-logo-white.svg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta
       name="description"
-      content="everything"
+      content="urbit-gateway"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://everything.dev/assets/favicon.png">
-    <meta property="og:image" content="https://everything.dev/assets/favicon.png">
+    <meta property="og:image" content="https://storage.googleapis.com/media.urbit.org/logo/White/~-logo-white.svg">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="everything" />
+    <meta property="og:title" content="urbit-gateway" />
     <meta property="og:description" content="" />
-    <link rel="apple-touch-icon" href="./favicon.png" />
+    <link rel="apple-touch-icon" href="https://storage.googleapis.com/media.urbit.org/logo/White/~-logo-white.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
