--- a/templates/frontend/gateway/public/index.html
+++ b/templates/frontend/gateway/public/index.html
@@ -24,6 +24,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="/main.bundle.js"></script>
     <div id="root"></div>
   </body>
 </html>
