--- a/templates/frontend/gateway/public/index.html
+++ b/templates/frontend/gateway/public/index.html
@@ -19,12 +19,12 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <title>Urbit Gateway</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="/main.bundle.js"></script>
+    <script src="./main.bundle.js"></script>
     <div id="root"></div>
   </body>
 </html>
