upgrades bos-workspace and gateway

--- a/templates/frontend/gateway/public/index.html
+++ b/templates/frontend/gateway/public/index.html
@@ -24,7 +24,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="./main.bundle.js"></script>
-    <div id="root"></div>
+    <near-social-viewer></near-social-viewer>
   </body>
 </html>
